# CeleriaMusicPlayer

./: .eslintrc.json  .gitignore  README.md  build.gradle  package.json  settings.gradle  tailwind.config.js  tsconfig.json  vite.config.ts
gradle/wrapper/: gradle-wrapper.properties
src/: index.html
src-tauri/: Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2023-01-18-170112_create_albums/: down.sql  up.sql
src-tauri/migrations/2023-01-18-170116_create_tracks/: down.sql  up.sql
src-tauri/src/: lib.rs  main.rs  music_manager.rs
src-tauri/src/commands/: infos.rs  mod.rs  musics.rs  settings.rs  utils.rs
src-tauri/src/core/music/: library_manager.rs  mod.rs  music_manager.rs
src-tauri/src/database/: mod.rs  schemas.rs  sqlite.rs
src-tauri/src/database/models/: albums.rs  mod.rs  tracks.rs
src-tauri/src/util/: config_manager.rs  logger.rs  mod.rs  utils.rs
src/css/: index.css
src/fonts/css/: Inter.css  Mukta.css
src/main/java/fr/celeria/musicplayer/: FxApplication.java  Main.java
src/main/java/fr/celeria/musicplayer/music/: IMusicCallback.java  MusicCallback.java  Player.java  Wav.java  WavPlayer.java
src/main/java/fr/celeria/musicplayer/panels/: AlbumsPanel.java
src/main/java/fr/celeria/musicplayer/panels/includes/: BottomPanel.java  LeftPanel.java  TopPanel.java
src/main/java/fr/celeria/musicplayer/panels/util/: IPanel.java  Panel.java  PanelManager.java  ResizeHelper.java
src/main/java/fr/celeria/musicplayer/utils/: FileMetadata.java  Logger.java  Utils.java
src/main/java/fr/musicplayer/celeria/: FxApplication.java  Logger.java  Main.java  ResizeHelper.java
src/main/java/fr/musicplayer/celeria/music/: Wav.java
src/main/java/fr/musicplayer/celeria/panel/: PanelManager.java
src/main/java/fr/musicplayer/celeria/panels/: AlbumsPanel.java  PanelManager.java  TopPanel.java
src/main/java/fr/musicplayer/celeria/panels/includes/: BottomPanel.java  LeftPanel.java  TopPanel.java
src/main/java/fr/musicplayer/celeria/panels/util/: IPanel.java  Panel.java  PanelManager.java  ResizeHelper.java
src/main/java/fr/musicplayer/celeria/utils/: Logger.java  Utils.java
src/main/resources/css/: BottomPanel.css
src/ts/: jsons.ts  main.ts  panel_manager.ts  utils.ts
src/ts/custom_elements/: music_progress.ts
