[package]
name = "celeria"
version = "0.1.0"
description = "Celeria is a software that read, manage and download musics."
authors = ["Asthowen<contact@asthowen.fr>"]
license = "Mozilla Public License 2.0"
repository = "https://github.com/Asthowen/CeleriaMusicPlayer"
default-run = "celeria"
edition = "2021"
rust-version = "1.59"

[profile.release]
codegen-units = 1
opt-level = "s"
panic = "abort"
strip = true
lto = true

[profile.dev]
incremental = true

[profile.dev.package.kira]
opt-level = 3
[profile.dev.package.cpal]
opt-level = 3
[profile.dev.package.symphonia]
opt-level = 3
[profile.dev.package.symphonia-bundle-mp3]
opt-level = 3
[profile.dev.package.symphonia-format-ogg]
opt-level = 3
[profile.dev.package.symphonia-codec-vorbis]
opt-level = 3
[profile.dev.package.symphonia-bundle-flac]
opt-level = 3
[profile.dev.package.symphonia-format-wav]
opt-level = 3
[profile.dev.package.symphonia-codec-pcm]
opt-level = 3

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev", version = "0.1.0" }
tauri = { version = "1.2.4", features = ["dialog-all", "fs-read-file", "protocol-asset", "system-tray", "window-all"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tokio = { version = "1.26.0", default-features = false, features = ["rt-multi-thread", "time", "macros"] }
diesel = { version = "2.0.3", features = ["libsqlite3-sys", "serde_json", "r2d2", "sqlite"] }
uuid = { version = "1.3.0", default-features = false, features = ["v4", "fast-rng"] }
serde = { version = "1.0.158", features = ["derive"] }
diesel_migrations = "2.0.0"
env_logger = "0.10.0"
serde_json = "1.0.94"
chrono = "0.4.24"
walkdir = "2.3.3"
base64 = "0.21.0"
opener = "0.5.2"
lofty = "0.11.0"
r2d2 = "0.8.10"
dirs = "5.0.0"
kira = "0.7.3"
log = "0.4"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
